# NYCU_UAV_offboard

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: control_architecture.md  geofence_rtl.md  lr24_communication.md  lr24_ppp_program.md  serial_elrs_offboard.md
launch/: serial_elrs_offboard.launch.py
src/: lr24_command_node.cpp  my_offboard_node.cpp
tools/: send_lr24_command.py
